--- a/vd.html
+++ b/vd.html
@@ -3,133 +3,234 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vedippura</title>
+    <title>Second Spot - Online PDF Tool</title>
     <style>
+        /* Global Styles */
+        :root {
+            --primary-color: #6c5ce7; /* Soft purple */
+            --secondary-color: #a29bfe; /* Lighter purple */
+            --background-color: #f9f9f9; /* Light gray */
+            --text-color: #333; /* Dark gray */
+            --card-background: #fff; /* White */
+            --border-color: #e0e0e0; /* Light gray border */
+        }
+
+        [data-theme="dark"] {
+            --primary-color: #a29bfe; /* Lighter purple */
+            --secondary-color: #6c5ce7; /* Soft purple */
+            --background-color: #1a1a1a; /* Dark background */
+            --text-color: #f9f9f9; /* Light text */
+            --card-background: #2d2d2d; /* Dark card background */
+            --border-color: #444; /* Dark border */
+        }
+
         body {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background-color: var(--background-color);
+            color: var(--text-color);
             margin: 0;
+            padding: 0;
+            transition: background-color 0.3s, color 0.3s;
+        }
+
+        header {
             text-align: center;
-            background: url('https://files.catbox.moe/4ir3v7.png') no-repeat center center fixed;
-            background-size: cover;
+            padding: 2rem;
+            background-color: var(--primary-color);
             color: white;
-            font-family: 'Times New Roman', serif;
+        }
+
+        header h1 {
+            font-size: 2.5rem;
+            margin: 0;
+            animation: fadeIn 1s ease-in-out;
+        }
+
+        header p {
+            font-size: 1.2rem;
+            margin: 0.5rem 0 0;
+            animation: fadeIn 1.5s ease-in-out;
+        }
+
+        @keyframes fadeIn {
+            from {
+                opacity: 0;
+            }
+            to {
+                opacity: 1;
+            }
+        }
+
+        main {
+            max-width: 800px;
+            margin: 2rem auto;
+            padding: 1rem;
+        }
+
+        section {
+            background-color: var(--card-background);
+            border: 1px solid var(--border-color);
+            border-radius: 8px;
+            padding: 1.5rem;
+            margin-bottom: 1.5rem;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            animation: fadeIn 0.5s ease-in-out;
         }
 
         h2 {
-            font-size: 3em;
-            margin-bottom: 20px;
-            text-shadow: -2px -2px 0 #000, 2px -2px 0 #000, -2px 2px 0 #000, 2px 2px 0 #000;
+            margin-top: 0;
+            color: var(--primary-color);
         }
 
-        img {
-            max-width: 80%;
-            max-height: 80%;
-            border-radius: 15px;
-            box-shadow: 0 10px 15px rgba(0, 0, 0, 0.3);
+        label {
+            display: block;
+            margin-bottom: 0.5rem;
+            font-weight: bold;
+            color: var(--text-color);
+        }
+
+        input[type="file"], select, button {
+            width: 100%;
+            padding: 0.75rem;
+            margin-bottom: 1rem;
+            border: 1px solid var(--border-color);
+            border-radius: 4px;
+            font-size: 1rem;
+            background-color: var(--card-background);
+            color: var(--text-color);
+            transition: all 0.3s ease;
+        }
+
+        input[type="file"]:hover, select:hover, button:hover {
+            border-color: var(--primary-color);
+        }
+
+        button {
+            background-color: var(--primary-color);
+            color: white;
+            border: none;
             cursor: pointer;
-            transition: transform 0.3s ease;
+            transition: background-color 0.3s, transform 0.3s;
         }
 
-        img:hover {
+        button:hover {
+            background-color: var(--secondary-color);
             transform: scale(1.05);
         }
 
-        /* Scrolling text style */
-        .scrolling-text {
-            position: fixed;
-            bottom: 10px;
-            width: 100%;
-            overflow: hidden;
-            white-space: nowrap;
-        }
-
-        .scrolling-text p {
+        #download-link {
             display: inline-block;
-            animation: scroll-left 10s linear infinite;
-            font-size: 2em;
-            font-weight: bold;
+            padding: 0.75rem 1.5rem;
+            background-color: #00b894; /* Green */
             color: white;
-            text-shadow: -2px -2px 0 #000, 2px -2px 0 #000, -2px 2px 0 #000, 2px 2px 0 #000;
+            text-decoration: none;
+            border-radius: 4px;
+            margin-top: 1rem;
+            transition: background-color 0.3s, transform 0.3s;
         }
 
-        /* Animation for scrolling */
-        @keyframes scroll-left {
-            0% {
-                transform: translateX(100%);
-            }
-            100% {
-                transform: translateX(-100%);
-            }
+        #download-link:hover {
+            background-color: #00997b; /* Darker green */
+            transform: scale(1.05);
         }
 
-        /* Style for the text below the image */
-        .below-image-text {
-            font-size: 1.5em;
-            margin-top: 20px;
+        footer {
+            text-align: center;
+            padding: 1rem;
+            background-color: var(--primary-color);
             color: white;
-            font-weight: bold;
-            text-shadow: -2px -2px 0 #000, 2px -2px 0 #000, -2px 2px 0 #000, 2px 2px 0 #000;
+            margin-top: 2rem;
+        }
+
+        /* Dark Mode Toggle */
+        .theme-toggle {
+            position: fixed;
+            top: 1rem;
+            right: 1rem;
+            background-color: var(--card-background);
+            border: 1px solid var(--border-color);
+            border-radius: 50%;
+            width: 40px;
+            height: 40px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            cursor: pointer;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            transition: all 0.3s ease;
+        }
+
+        .theme-toggle:hover {
+            transform: scale(1.1);
+        }
+
+        .theme-toggle img {
+            width: 20px;
+            height: 20px;
         }
     </style>
 </head>
 <body>
-    <h2>NITHIN SON OF BIJU</h2>
-    <img 
-        src="https://i.ibb.co/88cBrth/IMG-20250122-215355-738.jpg" 
-        alt="Image of Nithin Son of Biju" 
-        onclick="playRandomAudio()" />
+    <!-- Dark Mode Toggle -->
+    <div class="theme-toggle" onclick="toggleTheme()">
+        <img src="https://www.svgrepo.com/show/309493/dark-mode.svg" alt="Toggle Theme">
+    </div>
 
-    <!-- Text below the image -->
-    <p class="below-image-text">Eda Photo Il Click Akk 😹👍🏻</p>
+    <header>
+        <h1>Second Spot</h1>
+        <p>Your go-to tool for PDFs: merge, edit, unlock, or convert with ease.</p>
+    </header>
 
-    <!-- Audio Elements -->
-    <audio id="audio1">
-        <source src="https://files.catbox.moe/cse4gl.mp4" type="audio/mpeg">
-        Your browser does not support the audio element.
-    </audio>
-    <audio id="audio2">
-        <source src="https://files.catbox.moe/3ey8t2.mp4" type="audio/mpeg">
-        Your browser does not support the audio element.
-    </audio>
-    <audio id="audio3">
-        <source src="https://files.catbox.moe/lfyka5.mp4" type="audio/mpeg">
-        Your browser does not support the audio element.
-    </audio>
+    <main>
+        <!-- File Upload Section -->
+        <section>
+            <h2>Upload Your PDF Files</h2>
+            <input type="file" id="pdf-upload" accept=".pdf" multiple>
+            <p>Select the files you want to merge, edit, unlock, or convert.</p>
+        </section>
+
+        <!-- Options Section -->
+        <section>
+            <h2>Options</h2>
+            <label for="pages-per-sheet">Pages per Sheet:</label>
+            <select id="pages-per-sheet">
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="4">4</option>
+                <option value="6">6</option>
+                <option value="8">8</option>
+            </select>
+
+            <label for="action">Select Action:</label>
+            <select id="action">
+                <option value="merge">Merge PDFs</option>
+                <option value="edit">Edit PDF</option>
+                <option value="unlock">Unlock PDF</option>
+                <option value="convert">Convert PDF</option>
+            </select>
+        </section>
+
+        <!-- Process Button -->
+        <button id="process-button">Process PDF</button>
+
+        <!-- Output Section -->
+        <section>
+            <h2>Download Your File</h2>
+            <p>Once processed, your file will be available for download here.</p>
+            <a id="download-link" href="#" style="display: none;">Download PDF</a>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2025 Second Spot. All rights reserved.</p>
+    </footer>
 
     <script>
-        // Function to play a random audio when the image is clicked
-        function playRandomAudio() {
-            const audio1 = document.getElementById('audio1');
-            const audio2 = document.getElementById('audio2');
-            const audio3 = document.getElementById('audio3');
-
-            // Stop and reset all audios in case one is already playing
-            [audio1, audio2, audio3].forEach(audio => {
-                audio.pause();
-                audio.currentTime = 0;
-            });
-
-            // Randomly pick one audio to play
-            const randomAudio = Math.random();
-            let selectedAudio;
-            if (randomAudio < 0.33) {
-                selectedAudio = audio1;
-            } else if (randomAudio < 0.66) {
-                selectedAudio = audio2;
-            } else {
-                selectedAudio = audio3;
-            }
-            selectedAudio.play();
+        // Dark Mode Toggle
+        function toggleTheme() {
+            const body = document.body;
+            body.setAttribute('data-theme', body.getAttribute('data-theme') === 'dark' ? 'light' : 'dark');
         }
     </script>
-
-    <!-- Scrolling text at the bottom -->
-    <div class="scrolling-text">
-        <p>ക്ലാപ്പന വെടി അമീറിന്റെ പുത്രൻ പിടിയിൽ 🤌🏻</p>
-    </div>
 </body>
 </html>
